--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "background": {"scripts": ["background.js"]},
     "browser_action": {
         "default_icon": "icon.png",
+        "default_popup":"popup.html",
         "default_title": "LynkIt"
     },
     "name": "LynkIt",
