--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "background": {"scripts": ["background.js"]},
+    "background": {"scripts": ["js/background.js"]},
     "browser_action": {
         "default_icon": "icon.png",
-        "default_popup":"popup.html",
+        "default_popup":"html/popup.html",
         "default_title": "LynkIt"
     },
     "name": "LynkIt",
