--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "background": {"scripts": ["js/background.js"]},
+    "background": {"scripts": ["background.js"]},
     "browser_action": {
         "default_icon": "icon.png",
         "default_popup":"html/popup.html",
