--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,13 @@
     ],
     "version": "16.11.24",
     "manifest_version": 2,
-    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
+    "content_scripts": [
+    {
+        "matches": [
+        "<all_urls>"
+        ],
+        "js": ["external/jquery-3.4.1.min.js", "js/content.js"]
+    }
+    ]
 }
